# ex_zapcode

./: .gitignore  CHANGELOG.md  README.md  UPDATE_PROCEDURE.md  justfile  mix.exs
.github/workflows/: ci.yml  release.yml
docs/: substrate-evaluation.md
lib/: ex_zapcode.ex
lib/ex_zapcode/: exception.ex  native.ex  sandbox.ex
native/ex_zapcode/: Cargo.toml
native/ex_zapcode/src/: lib.rs
scripts/: release.exs
test/: ex_zapcode_test.exs  snapshot_test.exs
