[package]
name = "ex_zapcode"
version = "0.1.0"
edition = "2021"

[lib]
name = "ex_zapcode"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
# Our fork, with fixes for spread, switch break, and in-place array mutation.
zapcode-core = { git = "https://github.com/jtippett/zapcode.git", rev = "5c65842" }
indexmap = "2"
